<resources>
    <string name="app_name">Domotix</string>
    <string name="Bonjour">Bonjour tout le monde</string>
    <string name="menu_gestion">Vue gestion</string>
    <string name="retour">Back</string>
    <string name="add">+</string>
    <string name="add_room_edit">Nom de la pièce</string>
    <string name="add_room_title">Ajouter une pièce</string>
    <string name="validate">Valider</string>
    <string name="add_room_plus">Ajouter un capteur</string>
    <string name="modify">Modifier</string>
    <string name="add_room_minus">Enlever un capteur</string>
    <string name="planning_temperature">Créer un nouveau planning</string>
    <string name="add_planning">Nom du planning</string>
    <string name="name_error">Le nom doit être renseigné</string>
    <string name="toolbar1">Accueil</string>
    <string name="toolbar2">Mode auto</string>
    <string name="toolbar3">Plannings</string>
    <string name="toolbar4">Température</string>
    <string name="temperature">Température</string>
    <string name="lampe_off">Lampe éteinte</string>
    <string name="lampe_on">Lampe allumé</string>
    <string name="volet_off">Volet fermé</string>
    <string name="volet_on">Volet ouvert</string>
    <string name="flamme_off">Pas de flamme détecté</string>
    <string name="flamme_on">Flamme détecté</string>
    <string name="mouv_off">Aucun mouvement détecté</string>
    <string name="mouv_on">Mouvement détecté</string>
    <string name="LA_mode_on">Lumière auto: ON</string>
    <string name="LA_mode_off">Lumière auto: OFF</string>
    <string name="VA_mode_on">Volet auto: ON</string>
    <string name="VA_mode_off">Volet auto: OFF</string>
    <string name="heater_mode_on">Chauffage auto: ON</string>
    <string name="heater_mode_off">Chauffage auto: OFF</string>
    <string name="door_mode_on">Porte ouverte</string>
    <string name="door_mode_off">Porte fermée</string>
    <string name="mode_on">Activé</string>
    <string name="mode_off">Désactivé</string>
    <string name="delete">Supprimer</string>
    <string name="seuilLum">Seuil Luminosité</string>
    <string name="seuiltemp">Seuil Température</string>
    <string name="detec_mouv_lum">Détecteur de mouvement lumière</string>
    <string name="seuilFlamme">Seuil Flamme</string>
    <string name="mode_auto_off">Mode automatique désactivé</string>
    <string name="mode_auto_on">Mode automatique activé</string>
    <string name="heater_on">Chauffage activé</string>
    <string name="heater_off">Chauffage désactivé</string>
    <string name="heater_auto_on">Chauffage automatique activé</string>
    <string name="heater_auto_off">Chauffage automatique désactivé</string>
    <string name="alarm_on">Alarme activée</string>
    <string name="alarm_off">Alarme désactivée</string>
    <string name="traveller_on">Mode voyage activé</string>
    <string name="traveller_off">Mode voyage désactivé</string>
    <string name="porte_connectee">Porte connectée</string>
    <string name="humidite">Niveau d\'humidité dans l\'air :\ </string>
    <string name="modes">Gestion des modes automatiques</string>

    <string-array name="captors">
        <item>Lampe</item>
        <item>Lampe automatique</item>
        <item>Lampe RGB</item>
        <item>Volet</item>
        <item>Volet automatique</item>
        <item>Chauffage</item>
        <item>Détecteur de flamme</item>
        <item>Détecteur d\'humidité</item>
        <item>@string/porte_connectee</item>
    </string-array>

    <item name="lightToggle" type="id"/>
    <item name="lightAutoToggle" type="id"/>
    <item name="lightAutoModeToggle" type="id"/>
    <item name="temperatureValue" type="id"/>
    <item name="voletValue" type="id"/>
    <item name="voletAutoToggle" type="id"/>
    <item name="voletAutoModeToggle" type="id"/>
    <item name="flammeValue" type="id"/>
    <item name="mouvValue" type="id"/>
    <item name="heater" type="id"/>
    <item name="buttonHeater" type="id"/>
    <item name="luminosity" type="id"/>
    <item name="alarmToggle" type="id"/>
    <item name="heaterAuto" type="id"/>
    <item name="travellerToggle" type="id"/>
    <item name="light_and_auto" type="id"/>
    <item name="door" type="id"/>
    <item name="humiditeText" type="id"/>
    <item name="RGBid" type="id"/>
    <item name="selectColors" type="id"/>


</resources>