<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/planning_temperature"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="20sp">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_planning"
        android:id="@+id/planningName"
        android:layout_margin="10sp">

    </EditText>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="10dp"
        android:id="@+id/listView">

    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:textSize="20sp"
        android:onClick="validate"
        android:layout_marginTop="20dp">

    </Button>

</TableLayout>