<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:shrinkColumns="*">

    <TableRow
        android:gravity="center">
        <TextView
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/toolbar1">

        </TextView>

        <TextView
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/toolbar2">

        </TextView>

        <TextView
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/toolbar4">

        </TextView>

    </TableRow>

    <TableRow
        android:gravity="center">

        <ImageButton
            android:onClick="home"
            android:src="@drawable/ic_home"
            android:padding="20dp">

        </ImageButton>

        <ImageButton
            android:onClick="modeManager"
            android:src="@drawable/ic_mode"
            android:padding="20dp">

        </ImageButton>

        <ImageButton
            android:onClick="display_data"
            android:src="@drawable/ic_graph"
            android:padding="20dp">

        </ImageButton>

    </TableRow>

</TableLayout>


