<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Black"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/add_room_title"
            android:textColor="@color/Blanc"
            android:textSize="25sp">

        </TextView>

        <EditText
            android:id="@+id/roomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/Blanc"
            android:hint="@string/add_room_edit"
            android:textColor="@color/Blanc"
            android:textColorHint="#484848">

        </EditText>

        <TableLayout
            android:id="@+id/add_room_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:backgroundTint="@color/App"
                android:onClick="removeCaptor"
                android:text="@string/add_room_minus">

            </Button>

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/App"
                android:onClick="addCaptor"
                android:text="@string/add_room_plus">

            </Button>

        </LinearLayout>

        <Button
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/App"
            android:onClick="createRoom"
            android:text="@string/validate"
            android:textSize="25sp">

        </Button>

    </LinearLayout>

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"></include>

</RelativeLayout>
